ready to deploy

--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "focus-tracker",
   "private": true,
+  "homepage": "https://zj6pxpr5hd-creator.github.io/focus-tracker",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
